# django-scotty

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
list_views/: helpers.py
src/django_scotty/: __init__.py  apps.py  helpers.py
src/django_scotty/list_views/: urls.py
src/django_scotty/templates/django_tables2/: base_django_tables2.html  base_django_tables2_dict.html  django_tables_filter_line.html  rioja_table_template.html
templates/cotton/: django_simple_table.html
templates/django_tables2/: base_django_tables2.html  dummy.html  generic_detail.html  rioja_table_template.html  rioja_table_template_dict.html
templatetags/: sluguer.py
