[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[project]
name = "django-scotty"
version = "0.1.0"
description = "Advanced table views for Django with filters, exports, and bulk actions"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Juan Manuel Schillaci", email = "jmschillaci@gmail.com"}
]
keywords = ["django", "tables", "filters", "export", "django-tables2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "django>=3.2",
    "django-cotton>=0.9.0",
    "django-tables2>=2.4.0",
    "tablib[xls,xlsx]>=3.0.0",
    "django-filter>=22.1",
    "crispy-bootstrap5>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-scotty"
Repository = "https://github.com/yourusername/django-scotty"
Documentation = "https://github.com/yourusername/django-scotty#readme"
"Bug Tracker" = "https://github.com/yourusername/django-scotty/issues"

[tool.uv.build-backend]
module-name = "django_scotty"
module-root = ""

# Include templates and other non-Python files
[tool.uv.build-backend.source-include]
patterns = [
    "templates/**/*",
    "list_views/**/*",
    "templatetags/**/*",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
