[project]
name = "django-scotty"
version = "0.1.3"
description = "Advanced tables for django cruds"
readme = "README.md"
authors = [
    { name = "Juan Manuel Schillaci", email = "jmschillaci@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django-cotton>=2.1.3",
    "django-crispy-forms>=2.4",
    "django-filter>=25.2",
    "django-htmx>=1.26.0",
    "django-tables2>=2.7.5",
    "tablib>=3.8.0",
]

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"
